--- a/css/bannerHead.css
+++ b/css/bannerHead.css
@@ -21,7 +21,7 @@
   align-items: center;
   display: flex;
   /*background-image: linear-gradient( 135deg, #5EFCE8 0%, #736EFE 100%);*/
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(255, 255, 255, 0.2)), url(/images/tampa2.jpg) no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(255, 255, 255, 0.2)), url(austinportfolio/images/tampa2.jpg) no-repeat;
   background-size: cover;
   background-attachment: fixed;
   height: 100vh;
