--- a/scss/spotLight.scss
+++ b/scss/spotLight.scss
@@ -56,6 +56,9 @@
 
                 min-width: 230px;
             }
+            span {
+                font-style: italic;
+            }
             .button {
                 background: transparent;
                 border: 2px solid #DE4313;
