--- a/css/header.css
+++ b/css/header.css
@@ -36,7 +36,10 @@
       .headerWrapper .headerMain .mainNav li {
         padding: 48px 24px;
         color: white;
-        transition: all 1s; }
+        transition: all 1s;
+        cursor: pointer; }
+        .headerWrapper .headerMain .mainNav li:hover {
+          color: orange; }
     .headerWrapper .headerMain .hamburger {
       display: none; }
 
@@ -65,8 +68,15 @@
     font-size: 25px;
     color: #818181;
     display: block;
-    transition: 0.3s .sidenav a; }
-    .sidenav a :hover {
+    transition: 0.3s; }
+  .sidenav li {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s .sidenav li; }
+    .sidenav li :hover {
       color: #f1f1f1; }
 
 @media (min-width: 1px) and (max-width: 768px) {
