--- a/scss/header.scss
+++ b/scss/header.scss
@@ -24,6 +24,10 @@
         		padding: $spacingLg $spacingBase;
         		color: white;
         		transition: all 1s;
+            cursor: pointer;
+            &:hover {
+              color: orange;
+            }
         	}
         }
         .hamburger {
@@ -33,36 +37,44 @@
 }
 
 .sidenav {
-   height: 100%;
-   /* 100% Full-height */
-   width: 0;
-   /* 0 width - change this with JavaScript */
-   position: fixed;
-   /* Stay in place */
-   z-index: 100;
-   /* Stay on top */
-   top: 0;
-   left: 0;
-   background-color: #111;
-   /* Black*/
-   overflow-x: hidden;
-   /* Disable horizontal scroll */
-   padding-top: 60px;
-   /* Place content 60px from the top */
-   transition: 0.5s;
-   /* 0.5 second transition effect to slide in the sidenav */
-   a {
-      padding: 8px 8px 8px 32px;
-      text-decoration: none;
-      font-size: 25px;
-      color: #818181;
-      display: block;
-      transition: 0.3s &:hover {
-         color: #f1f1f1;
-      }
-   }
+    height: 100%;
+    /* 100% Full-height */
+    width: 0;
+    /* 0 width - change this with JavaScript */
+    position: fixed;
+    /* Stay in place */
+    z-index: 100;
+    /* Stay on top */
+    top: 0;
+    left: 0;
+    background-color: #111;
+    /* Black*/
+    overflow-x: hidden;
+    /* Disable horizontal scroll */
+    padding-top: 60px;
+    /* Place content 60px from the top */
+    transition: 0.5s;
+    /* 0.5 second transition effect to slide in the sidenav */
+    a {
+       padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        transition: 0.3s 
+    }
+    li {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        transition: 0.3s 
+        &:hover {
+            color: #f1f1f1;
+        }
+    }
 }
-
     
 @include phone {
     .headerWrapper {
