--- a/scss/spotLight.scss
+++ b/scss/spotLight.scss
@@ -18,6 +18,9 @@
             text-align: center;
             padding: $spacingSm $spacingSm $spacingLg $spacingSm;
         }
+        a {
+            color: #1bb4e5;
+        }
     }
     .spotLight-container {
         display: flex;
