--- a/css/footer.css
+++ b/css/footer.css
@@ -22,13 +22,12 @@
   .footer-wrapper .container .footer-container {
     display: flex;
     justify-content: center;
-    padding: 40px 0; }
+    padding: 30px 0 0 0;
+    flex-direction: column; }
     .footer-wrapper .container .footer-container .footer-block {
-      display: flex;
-      flex-direction: column; }
+      margin: 0 auto; }
       .footer-wrapper .container .footer-container .footer-block img {
-        max-width: 50px;
-        margin: 0 auto;
         padding-bottom: 24px; }
-      .footer-wrapper .container .footer-container .footer-block .footerBlock-text p {
-        text-align: center; }
+  .footer-wrapper .container p {
+    text-align: center;
+    padding: 0 0 30px 0; }
