--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -3,26 +3,24 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 .footer-wrapper {
-	background-color: #2a3a3f;
+    background-color: #2a3a3f;
     .container {
         .footer-container {
             display: flex;
             justify-content: center;
-            padding: 40px 0;
+            padding: 30px 0 0 0;
+            flex-direction: column;
             .footer-block {
-            	display: flex;
-            	flex-direction: column;
-            	img {
-            		max-width: 50px;
-            		margin: 0 auto;
-            		padding-bottom: $spacingBase;
-            	}
-            	.footerBlock-text {
-            		p {
-            			text-align: center;
-            		}
-            	}
+                margin: 0 auto;
+                img {
+                    padding-bottom: $spacingBase;
+                }
             }
+        }
+        p {
+            text-align: center;
+            padding: 0 0 30px 0;
         }
     }
 }
+
