--- a/scss/header.scss
+++ b/scss/header.scss
@@ -69,9 +69,11 @@
         font-size: 25px;
         color: #818181;
         display: block;
-        transition: 0.3s 
+        transition: 0.3s; 
+        cursor: pointer;
         &:hover {
             color: #f1f1f1;
+            cursor: pointer;
         }
     }
 }
